# singularity-io

./: .env  .env.example  .env.sample  .gitignore  .gitmodules  .vercelignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  FEATURES.md  GEMINI.md  HIGHER-GUARDIAN.md  HIGHER_GUARDIAN_INTEGRATION_SUMMARY.md  INTEGRATION.md  NEW_ECONOMY.md  OPERATIONAL_STATUS.md  PROJECT_PLAN.md  QUICKSTART.md  README-DESKTOP.md  README.md  S-IO-PROTOCOL-OVERVIEW.md  SETUP.md  SIO-INTEGRATION-GUIDE.md  SIO-PROTOCOL-README.md  SOLFUNMEME.md  SUMMARY.md  Singularity.bat  TEST_LOCAL.md  UPGRADE_NOTES.md  VERCEL_DEPLOY.md  VERCEL_FIX.md  VISUALIZATION.md  VISUAL_GUIDE.md  WALLET_DEBUG.md  build_exe.py  check_system.py  install.bat  ladle.vite.config.mjs  launch.bat  (+12 more)
Q_Layered_Network/: dqn_node_model.onnx  test_reasoning_dqn.py
api/: .vercelignore  Cargo.toml  README.md  analytics.py  bot_agent.py  bot_chat.py  chat.py  governance.py  groq_chat.py  groq_client.py  guardian_advanced.py  guardian_analytics.py  guardian_config.py  health.py  index.py  langchain_agent.py  leaderboard.py  main.py  network.py  neural_network.py  portfolio.py  q_network.py  requirements.txt  revenue.py  rpc_client.py  sio_client.py  (+24 more)
higher-guardian/: Cargo.toml  README.md  README_WIREGUARD.md
higher-guardian/src/: ethics.rs  guardian.rs  lib.rs  main.rs  main_demo.rs  main_wireguard.rs  monitoring.rs  network_security.rs  transaction.rs  windows_service.rs  wireguard_bridge.rs  wireguard_bridge_simple.rs
neural_network/: README.md  main.py  pyproject.toml  requirements.txt
neural_network/src/: bridge.rs
(+267 files in other folders)
