[build-system]
requires = ["maturin==1.2.3", "pydantic"]
build-backend = "maturin"

[project]
name = "pynnet_bridge"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pynnet_bridge"
